--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   audioplayers: ^6.0.0
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
