--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,37 +1,20 @@
 name: ermokids
-description: ErmoKids - Plataforma Educacional Infantil
+description: App infantil educativo
 publish_to: "none"
 
-version: 1.0.0+1
-
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.8
-  shared_preferences: ^2.5.4
-  audioplayers: ^6.5.1
-  flutter_local_notifications: ^17.2.4
-  timezone: ^0.9.4
-  http: ^1.2.0
-  video_player: ^2.8.6
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^3.0.0
+  audioplayers: ^6.0.0
 
 flutter:
   uses-material-design: true
 
+  flutter:
   assets:
     - assets/images/
     - assets/music/
-    - assets/coloring/
-    - assets/sounds/
-
-
-
+    - assets/puzzles/
