--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,31 +1,25 @@
 workflows:
-  android-workflow:
+  ermokids_android:
     name: ErmoKids Android Build
     max_build_duration: 60
     instance_type: linux_x2
-
     environment:
       node: 18
-
+      java: 17
     scripts:
       - name: Install dependencies
         script: |
           npm install
-
-      - name: Build web app
+      - name: Build web
         script: |
           npm run build
-
       - name: Sync Capacitor
         script: |
           npx cap sync android
-
-      - name: Build Android APK and AAB
+      - name: Build APK
         script: |
           cd android
           ./gradlew assembleDebug
-          ./gradlew bundleRelease
-
     artifacts:
-      - android/app/build/outputs/**/*.apk
-      - android/app/build/outputs/**/*.aab
+      - andr
+
